<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_surface"
    tools:context=".MainActivity">

    <include
        android:id="@+id/header"
        layout="@layout/view_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/black"
        android:contentDescription="@string/camera_preview_description"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="org.tensorflow.lite.examples.classification.CameraActivity" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button_context_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/brand_green"
                android:contentDescription="@string/contextual_description"
                android:text="@string/contextual_description"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_external_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/brand_green"
                android:contentDescription="@string/external_help"
                android:text="@string/external_help"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_download_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/brand_green"
            android:contentDescription="@string/export_image"
            android:text="@string/export_image"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/mic_indicator_window"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bg_mic_indicator"
        android:contentDescription="@string/mic_listening_indicator"
        android:padding="10dp"
        android:src="@android:drawable/ic_btn_speak_now"
        android:tint="@color/brand_green"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
